# Matrix Layouts
install_data('matrix_layouts/razerblade16.json',
             'matrix_layouts/razerdefault22.json',
             'matrix_layouts/razerblade25.json',
             'matrix_layouts/razerhunt22.json',
             install_dir : join_paths(get_option('datadir'), 'razergenie/matrix_layouts'))

# Appstream XML
install_data('xyz.z3ntu.razergenie.appdata.xml',
             install_dir : join_paths(get_option('datadir'), 'metainfo'))

# Desktop file
install_data('xyz.z3ntu.razergenie.desktop',
             install_dir : join_paths(get_option('datadir'), 'applications'))

subdir('translations')
