# Translations
ts_files = [
  'bg.ts',
  'de.ts',
  'eo.ts',
  'fr.ts',
  'ka.ts',
  'nl.ts',
  'ru.ts',
]
qt.compile_translations(ts_files : ts_files,
                        install : true,
                        install_dir : razergenie_data_dir / 'translations',
                        build_by_default : true)

